// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionType should render in lg 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionType"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction Type
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Multipayment
      </div>
    </div>
    <div
      class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          multipayment.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType should render in md 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionType"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction Type
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Multipayment
      </div>
    </div>
    <div
      class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          multipayment.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType should render in sm 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionType"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Transaction Type
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Multipayment
        </div>
        <span
          class="text-theme-text dark:text-theme-secondary-600"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg>
              multipayment.svg
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType should render in xl 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionType"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction Type
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Multipayment
      </div>
    </div>
    <div
      class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          multipayment.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType should render in xs 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionType"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Transaction Type
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Multipayment
        </div>
        <span
          class="text-theme-text dark:text-theme-secondary-600"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg>
              multipayment.svg
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
